--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             if (correctEncrypted === encryptedSurname.toUpperCase()) {
                 resultDiv.innerHTML = '<div class="result success">Поздравляем! Вы правильно зашифровали фамилию.</div>';
             } else {
-                resultDiv.innerHTML = `<div class="result error">Неправильно. Правильный результат: ${correctEncrypted}. Попробуйте еще раз!</div>`;
+                resultDiv.innerHTML = `<div class="result error">Неправильно. Попробуйте еще раз!</div>`;
             }
         });
         
