--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
             try {
                 const response = await fetch(scriptURL, {
                     method: 'POST',
-                    mode: 'cors',
+                    mode: 'no-cors',
                     headers: {
                         'Content-Type': 'application/json'
                     },
