--- a/index.html
+++ b/index.html
@@ -305,6 +305,8 @@
             box-shadow: 0 2px 8px rgba(0, 0, 0.05);
             max-width: 100%;
             -webkit-overflow-scrolling: touch; /* Enable smooth scrolling on iOS */
+            display: block;
+            -ms-overflow-style: scrollbar; /* Show scrollbar on IE/Edge */
         }
 
         #vigenere-table {
@@ -357,7 +359,7 @@
             font-size: 0.9rem;
         }
 
-        /* Responsive design */
+        /* Enhanced Responsive design for mobile */
         @media (max-width: 768px) {
             .container {
                 padding: 25px;
@@ -373,16 +375,20 @@
                 font-size: 1rem;
             }
 
+            #vigenere-table-container {
+                -webkit-overflow-scrolling: touch;
+            }
+
             #vigenere-table {
                 font-size: 8px;
-                min-width: 600px;
+                min-width: 100%; /* Ensure table takes full width and remains scrollable */
             }
 
             #vigenere-table th,
             #vigenere-table td {
                 padding: 3px;
-                min-width: 18px;
-                max-width: 18px;
+                min-width: 20px;
+                max-width: 20px;
             }
 
             .modal-content {
@@ -400,9 +406,14 @@
                 padding: 20px 15px;
             }
 
+            #vigenere-table-container {
+                -webkit-overflow-scrolling: touch;
+            }
+
             #vigenere-table {
                 font-size: 7px;
-                min-width: 500px;
+                min-width: 100%; /* Ensure table takes full width and remains scrollable */
+                table-layout: auto; /* Allow table to adjust to content */
             }
 
             #vigenere-table th,
@@ -410,7 +421,48 @@
                 padding: 2px;
                 min-width: 15px;
                 max-width: 15px;
+                width: 2.8%; /* Approximate width per cell to fit 33 columns */
             }
+
+            .modal-content {
+                width: 98%;
+                padding: 20px;
+            }
+        }
+
+        /* Additional styles for very small screens */
+        @media (max-width: 360px) {
+            #vigenere-table {
+                font-size: 6px;
+                min-width: 100%;
+            }
+
+            #vigenere-table th,
+            #vigenere-table td {
+                padding: 1px;
+                min-width: 12px;
+                max-width: 12px;
+            }
+        }
+
+        /* Ensure horizontal scrolling indicator is visible */
+        #vigenere-table-container::-webkit-scrollbar {
+            -webkit-appearance: none;
+            height: 8px;
+        }
+
+        #vigenere-table-container::-webkit-scrollbar-track {
+            background: #f1f1f1;
+            border-radius: 4px;
+        }
+
+        #vigenere-table-container::-webkit-scrollbar-thumb {
+            background: #c1c1c1;
+            border-radius: 4px;
+        }
+
+        #vigenere-table-container::-webkit-scrollbar-thumb:hover {
+            background: #a8a8a8;
         }
     </style>
 </head>
