--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
             color: var(--success-color);
             border: 1px solid #c8e6d3;
             overflow-y: auto;
+            height: 600px;
         }
 
         .error {
@@ -293,6 +294,7 @@
             color: var(--error-color);
             border: 1px solid #f8d7da;
             overflow-y: auto;
+            height: 600px;
         }
         
         .result-image {
