scrollable result window v5

--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
             width: 100px;
             height: 100px;
             margin-bottom: 8px;
+            align-items: center;
         }
 
         #vigenere-table-container {
